Refactor: fix warnings in notification-service